--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,9 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home",   root_path %></li>
-        <li><%= link_to "Help",   help_path %></li>
+        <li><%= link_to "ホーム",   root_path %></li>
+        <li><%= link_to "マニュアル",   help_path %></li>
         <% if logged_in? %>
         <li><%= link_to "Users", users_path %></li>
         <li class="dropdown">
@@ -21,7 +20,7 @@
           </ul>
         </li>
         <% else %>
-        <li><%= link_to "Log in", login_path %></li>
+        <li><%= link_to "管理者画面", login_path %></li>
         <% end %>
       </ul>
     </nav>
