--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <%= yield %>
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
-      <%= puts("本番環境ですね！") if Rails.env.production? %>
+      <%= puts("<p> 本番環境ですね！ </p>") if Rails.env.production? %>
     </div>
   </body>
 </html>
