--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,2 +1,20 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+/*クラスのCSS*/
+
+.center{
+    text-align: center
+}
+
+.main{
+    font-size: 30pt;
+    margin: 150px 25px 25px 25px
+}
+
+/*要素のCSS*/
+
+h1 {
+    font-size: 30pt;
+    margin: 50px 25px 25px 25px
+}
