--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,22 +5,9 @@
         <li><%= link_to "ホーム",   root_path %></li>
         <li><%= link_to "マニュアル",   help_path %></li>
         <% if logged_in? %>
-        <li><%= link_to "Users", users_path %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            Account <b class="caret"></b>
-          </a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "Profile",  current_user %></li>
-            <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-            <li class="divider"></li>
-            <li>
-              <%= link_to "Log out", logout_path, method: "delete" %>
-            </li>
-          </ul>
-        </li>
+          <li><%= link_to "ログアウト", logout_path, method: "delete" %></li>
         <% else %>
-        <li><%= link_to "管理者画面", login_path %></li>
+          <li><%= link_to "ログイン", login_path %></li>
         <% end %>
       </ul>
     </nav>
