--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,7 @@
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
-      <%= debug(params) if Rails.env.development? %>
-      <%= puts("<p> 本番環境ですね！ </p>") if Rails.env.production? %>
+      <%= debug(params) if Rails.env.production? %>
     </div>
   </body>
 </html>
