CSS and inputBox

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -8,13 +8,18 @@
 }
 
 .main{
-    font-size: 30pt;
+    font-size: 35pt;
     margin: 150px 25px 25px 25px
+}
+
+.inputBoxSize{
+    width: 1000px;
+    height: 25px;
 }
 
 /*要素のCSS*/
 
 h1 {
     font-size: 30pt;
-    margin: 50px 25px 25px 25px
+    margin: 75px 25px 25px 25px
 }
