--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,12 @@
 <div class="center main">
   <p>オープンデータ横断検索システム</p>
 </div>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 center">
+    <%= form_tag("/search", method: "get") do %>
+      <%= text_field_tag(:q) %>
+      <%= submit_tag("検索") %>
+    <% end %>
+  </div>
+</div>
