--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
         <li><%= link_to "ホーム",   root_path %></li>
         <li><%= link_to "マニュアル",   help_path %></li>
         <% if logged_in? %>
+          <li><%= link_to "管理者画面", admin_path, method: "get" %></li>
           <li><%= link_to "ログアウト", logout_path, method: "delete" %></li>
         <% else %>
           <li><%= link_to "ログイン", login_path %></li>
