--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,8 +4,8 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3 center">
-    <%= form_tag("/search", method: "get") do %>
-      <%= text_field_tag(:q) %>
+      <%= form_tag("/search", method: "get") do %>
+      <%= text_field :query, :size=>"10000" %>
       <%= submit_tag("検索") %>
     <% end %>
   </div>
