--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -12,6 +12,12 @@
     margin: 150px 25px 25px 25px
 }
 
+.footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
 .inputBoxSize{
     width: 1000px;
     height: 25px;
