--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -13,9 +13,12 @@
 }
 
 .footer{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+    position: fixed !important;  
+    position: absolute;  
+    bottom: 0;  
+    left: 0;  
+    width: 100%;  
+    height: 50px;  
 }
 
 .inputBoxSize{
