--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
+<div id='logo'>
+<%= link_to image_tag("logo.jpg", alt: "BOA logo"),'http://www.jbaudit.go.jp' %>
+</div>
+
 <div class="center main">
   <p>オープンデータ横断検索システム</p>
 </div>
