--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -4,12 +4,12 @@
 /*クラスのCSS*/
 
 .center{
-    text-align: center
+    text-align: center;
 }
 
 .main{
     font-size: 35pt;
-    margin: 150px 25px 25px 25px
+    margin: 80px 25px 25px 25px
 }
 
 .footer{
@@ -21,14 +21,16 @@
     height: 50px;  
 }
 
-.inputBoxSize{
-    width: 1000px;
-    height: 25px;
-}
 
 /*要素のCSS*/
 
 h1 {
     font-size: 30pt;
     margin: 75px 25px 25px 25px
+}
+
+/*IDのCSS*/
+#logo{
+    margin-top: 45pt;
+    text-align: left;
 }
