--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,3 @@
 <footer class="footer">
-
-<p class="center">Copyright &copy; 2017-2018 Kento Mukai All Rights Reserved.</p>
-
+<p class="center">Copyright &copy; 2017-2018 Board of Audit of Japan  All Rights Reserved.</p>
 </footer>
