--- a/app/views/users/admin.html.erb
+++ b/app/views/users/admin.html.erb
@@ -2,9 +2,17 @@
 
 <h1>管理者画面</h1>
 
-ドロップダウンリストを作成！
 <p>自動データ更新機能</p>
-<%= button_to '実行', {:controller => 'connections', :action => 'api'} %>
+<%= form_tag("/api", method: "get") do %>
+    <%= select :site, :name, { "データカタログサイト" => "data", 
+                               "IT DASHBOARD" => "itdb",
+                               "法人インフォメーション" => "info" } %>
+    <%= submit_tag("実行") %>
+<% end %>
 <br>
 <p>手動データ更新機能</p>
-<%= button_to '実行', {:controller => 'connections', :action => 'noapi'} %>
+<%= form_tag("/noapi", method: "get") do %>
+    <%= select :site, :name, { "行政事業レビュー" => "review",
+                               "国有財産情報公開システム" => "property" } %>
+    <%= submit_tag("実行") %>
+<% end %>
