--- a/app/views/users/admin.html.erb
+++ b/app/views/users/admin.html.erb
@@ -2,16 +2,15 @@
 
 <h1>管理者画面</h1>
 
-<p>自動データ更新機能</p>
-<%= form_tag("/api", method: "get") do %>
+<h2>自動データ更新機能</h2>
+<%= form_tag("/api", method: "get", class: "apiFrom" ) do %>
     <%= select :site, :name, { "データカタログサイト" => "data", 
                                "IT DASHBOARD" => "itdb",
                                "法人インフォメーション" => "info" } %>
     <%= submit_tag("実行") %>
 <% end %>
-<br>
-<p>手動データ更新機能</p>
-<%= form_tag("/noapi", method: "get") do %>
+<h2>手動データ更新機能</h2>
+<%= form_tag("/noapi", method: "get", class: "apiFrom" ) do %>
     <%= select :site, :name, { "行政事業レビュー" => "review",
                                "国有財産情報公開システム" => "property" } %>
     <%= submit_tag("実行") %>
