--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3 center">
     <%= form_tag("/search", method: "get" ) do %>
-      <%= text_field_tag(:query, "", size: "70x4") %>
+      <%= text_field_tag(:query, "", size: "70x4", placeholder: "検索したいキーワードを入力してください") %>
       <%= submit_tag("検索") %>
     <% end %>
   </div>
