--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -13,13 +13,16 @@
 
 .main{
     font-size: 35pt;
-    margin: 70px 25px 15px 25px
+    margin: 70px 25px 15px 25px;
+}
+
+.row{
+    margin-bottom:330px;
 }
 
 .footer{
-    position: fixed !important;  
-    position: absolute;  
-    bottom: 0;  
+    position: relative;
+    bottom: 0;
     left: 0;  
     width: 100%;  
     height: 50px;  
@@ -29,8 +32,7 @@
     margin: 15px 0px 30px 50px
 }
 
-
-/*要素のCSS*/
+/*ヘッダーのCSS*/
 
 h1 {
     font-size: 30pt;
@@ -38,7 +40,7 @@ h1 {
 }
 
 h2 {
-    font-size: 15pt;
+    font-size: 20pt;
     margin: 20px 0px 0px 50px
 }
 
@@ -46,4 +48,36 @@ h2 {
 #logo{
     margin-top: 10pt;
     text-align: left;
+}
+
+
+/*詳細検索機能のテーブル*/
+table {
+    margin-left:50px;
+    margin-bottom:50px;
+	border-collapse: collapse;
+}
+
+div.test_box{
+    margin-left:50px;
+    margin-top:25px;
+    margin-bottom:5px;
+}
+
+td {
+	border: solid 1px;
+	padding: 0.5em;
+}
+
+td.attribute{
+    width: 250px;
+    padding: 7px;
+    vertical-align: top;
+}
+
+td.check_box{
+    text-align: center;
+    width: 100px;
+    padding: 7px;
+    vertical-align: top;
 }
